updated jar